--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
             <img class="logo" src="pics/mpesa.jpg" width="56%" height="56%" alt="">
         </div>
         <div class="copyright">
-            <p>2023 ,dreams of Kache -mwanaisha salim</p>
+            <p>2024 @eshaah salim -mwanaisha salim</p>
         </div>
     </footer>
 
