--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
             <img class="logo" src="pics/mpesa.jpg" width="56%" height="56%" alt="">
         </div>
         <div class="copyright">
-            <p>2023 ,dreams of Kache -mwanaisha salim</p>
+            <p>2024 ,@eshaa salim</p>
         </div>
     </footer>
 
